--- a/singleton_models/templates/admin/singleton_models/change_form.html
+++ b/singleton_models/templates/admin/singleton_models/change_form.html
@@ -8,3 +8,17 @@
     {{ opts.verbose_name|capfirst }}
 </div>
 {% endblock %}
+
+{% block object-tools %}
+{% if change %}{% if not is_popup %}
+  <ul class="object-tools">
+    <li><a href="history/" class="historylink">{% trans "History" %}</a></li>
+    {% if has_absolute_url %}
+        <li><a href="../../../r/{{ content_type_id }}/{{ object_id }}/" class="viewsitelink">
+            {% trans "View on site" %}</a>
+        </li>
+    {% endif%}
+  </ul>
+{% endif %}{% endif %}
+{% endblock %}
+
